--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ai": "^4.3.16",
     "framer-motion": "^12.15.0",
     "next": "15.3.3",
+    "next-auth": "^5.0.0-beta.28",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
