--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
     "@ai-sdk/react": "^1.2.12",
+    "@auth/prisma-adapter": "^2.9.1",
+    "@prisma/client": "^6.9.0",
     "ai": "^4.3.16",
     "framer-motion": "^12.15.0",
     "next": "15.3.3",
@@ -32,6 +34,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "prisma": "^6.9.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
