--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@auth/prisma-adapter": "^2.9.1",
     "@prisma/client": "^6.9.0",
     "ai": "^4.3.16",
+    "axios": "^1.9.0",
     "framer-motion": "^12.15.0",
     "next": "15.3.3",
     "next-auth": "^5.0.0-beta.28",
