--- a/.github/workflows/cd-aws.yml
+++ b/.github/workflows/cd-aws.yml
@@ -32,7 +32,7 @@ on:
 
 env:
   AWS_REGION: us-east-2                                                                 # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: 961156486325.dkr.ecr.us-east-2.amazonaws.com/bennnnzo/speek           # set this to your Amazon ECR repository name
+  ECR_REPOSITORY: bennnnzo/speek                                                        # set this to your Amazon ECR repository name
   ECS_SERVICE: speek-prod-task-service-3c4bd9tw                                         # set this to your Amazon ECS service name
   ECS_CLUSTER: speek-cluster                                                            # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: speek-prod-task                                                  # set this to the path to your Amazon ECS task definition
