--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@ai-sdk/react": "^1.2.12",
     "@auth/prisma-adapter": "^2.9.1",
     "@prisma/client": "^6.9.0",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "ai": "^4.3.16",
     "axios": "^1.9.0",
     "framer-motion": "^12.15.0",
